src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  font-family: "Rubik", sans-serif;
}

h1, h2, h3 {
  font-family: "Rubik", sans-serif;
  font-weight: 600;
}

code, code * {
  font-family: "Spline Sans Mono", monospace;
  font-style: normal !important;
  font-weight: 400 !important;
}

p {
    padding-top: 10px;
    padding-bottom: 5px;
}

.btn {
    @apply flex text-black dark:text-white px-4 py-2 rounded-md;
    @apply transition-colors;
}

.btn:hover {
    @apply no-underline;
}

.btn.btn-primary {
    @apply bg-blue-700 text-white;
}

.btn-thin {
    @apply py-2 text-sm;
}

.btn.btn-primary:hover {
    @apply bg-blue-800;
}

.btn.btn-secondary {
    @apply bg-purple-700 text-white;
}

.btn.btn-secondary:hover {
    @apply bg-purple-800;
}

.btn.btn-outline {
    @apply bg-transparent;
}

.btn.btn-outline:hover {
    @apply underline;
}

.docimg {
    display: block;
    margin: 10px auto;
}

.menu__list-item {
    @apply !mt-0 !mr-0.5;
}

.menu__link {
    @apply text-sm py-1 text-gray-600;
}

.menu__link:hover {
    @apply !bg-gray-200 !text-gray-800;
}

.menu__link--sublist-caret:after {
    min-width: .6rem !important;
    width: .6rem !important;
}

.navbar__logo {
    height: 40px;
}

.navbar__link {
    @apply text-sm px-2;
}

.navbar__link--active {
    @apply underline;
}

.navbar__link--active:hover {
    @apply underline;
}

.theme-doc-version-badge {
    @apply mb-4;
}

@media (max-width: 996px) {
    .navbar__items.navbar__items--right li.custom-button {
        display: none !important;
    }
}

/* You can override the default Infima variables here. */
:root {
  /* Fluvio Color Palette */

  /* Shades of Fluvio Logo Color */
  --fluvio-800: #2A1B3D;
  --fluvio-600: #412E69;
  --fluvio-400: #44318D;
  --fluvio-200: #7D67A3;

  --green-800: #1D4249;
  --green-400: #3B945E;
  --green-200: #57BA98;

  --ocean-400: #495890;

  --red-400: #D54344;

  --rose-400: #D83F87;

  --slate-200: #A4B3B6;

  --white: #FFFFFF;

  --ifm-color-primary: var(--fluvio-400);
  --ifm-color-primary-dark: var(--fluvio-200);
  --ifm-color-primary-darker: var(--fluvio-600);
  --ifm-color-primary-darkest: var(--fluvio-800);
  --ifm-color-primary-light: #33925d;
  --ifm-color-primary-lighter: #359962;
  --ifm-color-primary-lightest: #3cad6e;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'] {
  --ifm-color-primary: var(--fluvio-200);
  --ifm-color-primary-dark: var(--fluvio-400);
  --ifm-color-primary-darker: var(--fluvio-600);
  --ifm-color-primary-darkest: var(--fluvio-800);
  --ifm-color-primary-light: #29d5b0;
  --ifm-color-primary-lighter: #32d8b4;
  --ifm-color-primary-lightest: #4fddbf;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

